# thx

./: AUTHORS  CHANGELOG  ChangeLog  Makefile.am  README  TODO  bootstrap  configure.ac  configure.in  thx.xpm
DOCS/: AI.txt  Client.fig  ListOfStuffFromSE.txt  Notes.txt  Overview.fig  team.txt
config/: mdl_have_opengl.m4
data/graphics/: Makefile.am
data/graphics/fonts/: Makefile.am
data/graphics/textures/: Makefile.am  ice.rgb  rock.ppm  rock.rgb  rock_real.rgb  snow.rgb  snow_cliff5_128.rgb
data/sounds/: Makefile.am  explosion.raw  explosion2.raw  fire.raw  menu_back_menu.raw  menu_deselect.raw  menu_forward_menu.raw  menu_move.raw  menu_select.raw
src/: Makefile  Makefile.am  aibaltazar.cc  aibaltazar.hh  aicasper.cc  aicasper.hh  aifactory.cc  aifactory.hh  aiplayer.cc  aiplayer.hh  client.cc  client.hh  collision.cc  collision.hh  color.cc  color.hh  command.cc  command.hh  commandconsumer.cc  commandconsumer.hh  console.cc  console.hh  debug.cc  debug.hh  display.cc  display.hh  entities.cc  entities.hh  explosion.cc  explosion.hh  framerate.cc  framerate.hh  game.cc  game.hh  game_cmds.cc  game_cmds.hh  gamemode.cc  gamemode.hh  inputconsumer.cc  inputconsumer.hh  (+69 more)
src/glTexFont/: Makefile  Makefile.am  README  gltga.cpp  gltga.h  text.cpp  text.h  tga.cpp  tga.h  utility.cpp  utility.h
